data/derived/fa15/progs/unify/prog3559.ml.out
Characters 91-94:
  let f a x =  a^sepConcat(sep, x) in
                           ^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
